[Layout] Fix notice close button intersecting text
Fixes #191. Instead of intersecting it moves the button into a new line.
This looks strange when only the button is on the new line,
but it's an improvement at least.

--- a/app/javascript/src/styles/common/notices.scss
+++ b/app/javascript/src/styles/common/notices.scss
@@ -32,6 +32,7 @@ div#notice {
 }
 
 a#close-notice-link {
-  position: absolute;
-  right: 1em;
+  display: flex;
+  float: right;
+  padding: 0 0.75em;
 }
